Fix collapsible user links issue on tablet breakpoint
Bug: T314757

--- a/resources/skins.vector.styles/components/UserLinks.less
+++ b/resources/skins.vector.styles/components/UserLinks.less
@@ -58,7 +58,7 @@
 	}
 
 	.user-links-collapsible-item {
-		@media ( max-width: @min-width-tablet ) {
+		@media ( max-width: @max-width-mobile ) {
 			display: none;
 		}
 	}
